[gd_scene load_steps=31 format=2]

[ext_resource path="res://Objects/Stage/Characters/Enemy/Boss/Boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/2D/Characters/GunSlinger.png" type="Texture" id=2]
[ext_resource path="res://Objects/Stage/Characters/Enemy/Boss/GunSlinger/State/Idle.gd" type="Script" id=3]
[ext_resource path="res://Objects/Stage/Characters/Enemy/State/StateEnemyShoot.gd" type="Script" id=4]
[ext_resource path="res://Objects/Stage/Projectile/RedBullet/RedBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Stage/Projectile/HomingRedBullet/HomingRedBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Scripts/CollisionBox/Hurtbox.gd" type="Script" id=7]
[ext_resource path="res://Objects/Stage/Characters/Enemy/State/StateEnemyJump.gd" type="Script" id=8]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec3 color = vec3(1,1,0);
uniform float color_progress  : hint_range(0,1) = 0;

vec3 interpolate_vec3(vec3 start, vec3 end, float delta){
	return start + (end-start) * delta;
}

void fragment(){
	vec4 origin = texture(TEXTURE, UV);
	COLOR.rgb = interpolate_vec3(origin.rgb, color, color_progress);
	COLOR.a = origin.a;
}"

[sub_resource type="ShaderMaterial" id=22]
shader = SubResource( 5 )
shader_param/color = Vector3( 1, 1, 0 )
shader_param/color_progress = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 32, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "JumpBackward",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "JumpForward",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "ShootDiagonal",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "ShootDiagonalRecover",
"speed": 12.0
}, {
"frames": [ SubResource( 20 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "ShootDiagonalStartup",
"speed": 12.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "ShootFront",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "ShootFrontRecover",
"speed": 12.0
}, {
"frames": [ SubResource( 19 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "ShootFrontStartup",
"speed": 12.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "ShootUp",
"speed": 12.0
}, {
"frames": [ SubResource( 15 ), SubResource( 15 ), SubResource( 15 ) ],
"loop": true,
"name": "ShootUpRecover",
"speed": 12.0
}, {
"frames": [ SubResource( 21 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "ShootUpStartup",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 7, 13.5 )

[node name="GunSlinger" instance=ExtResource( 1 )]
animation_player_path = NodePath("Pivot/AnimatedSprite")

[node name="Pivot" parent="." index="1"]
material = SubResource( 22 )

[node name="CheckFloor" parent="Pivot" index="1"]
cast_to = Vector2( 0, 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot" index="2"]
use_parent_material = true
frames = SubResource( 17 )
animation = "Idle"
playing = true

[node name="FrontGunBarrel" type="Position2D" parent="Pivot" index="3"]
position = Vector2( 19, -2 )

[node name="DiagonalGunBarrel" type="Position2D" parent="Pivot" index="4"]
position = Vector2( 14, -14 )

[node name="TopGunBarrel" type="Position2D" parent="Pivot" index="5"]
position = Vector2( 4, -20 )

[node name="CheckWall" type="RayCast2D" parent="Pivot" index="6"]
enabled = true
cast_to = Vector2( -14, 0 )

[node name="Startup" parent="StateMaster" index="0"]
start_state_path = NodePath("../Idle")

[node name="Idle" type="Node" parent="StateMaster" index="1"]
script = ExtResource( 3 )
action_duration = 1.5
wall_raycast_path = NodePath("../../Pivot/CheckWall")

[node name="ShootFront" type="Node" parent="StateMaster" index="2"]
script = ExtResource( 4 )
damage = 1
animations_name = [ "ShootFrontStartup", "ShootFront", "ShootFrontRecover" ]
animation_offset = Vector2( 16, 0 )
projectile = ExtResource( 5 )
shoot_position = NodePath("../../Pivot/FrontGunBarrel")
exception_group = "Enemy"

[node name="ShootDiagonal" type="Node" parent="StateMaster" index="3"]
script = ExtResource( 4 )
damage = 1
animations_name = [ "ShootDiagonalStartup", "ShootDiagonal", "ShootDiagonalRecover" ]
projectile = ExtResource( 5 )
shoot_position = NodePath("../../Pivot/DiagonalGunBarrel")
exception_group = "Enemy"
projectile_params = [ Vector2( 1, -1 ) ]

[node name="ShootUp" type="Node" parent="StateMaster" index="4"]
script = ExtResource( 4 )
damage = 1
animations_name = [ "ShootUpStartup", "ShootUp", "ShootUpRecover" ]
animation_offset = Vector2( 0, -16 )
projectile = ExtResource( 6 )
shoot_position = NodePath("../../Pivot/TopGunBarrel")
exception_group = "Enemy"
projectile_params = [ "Player" ]

[node name="JumpForward" type="Node" parent="StateMaster" index="5"]
script = ExtResource( 8 )
jump_force = 80

[node name="JumpBackward" type="Node" parent="StateMaster" index="6"]
script = ExtResource( 8 )
jump_animation = "JumpBackward"
jump_force = 80
jump_direction = -1

[node name="Hurt" parent="StateMaster" index="7"]
hurt_soundfx = null

[node name="Dead" parent="StateMaster" index="8"]
freeze_duration = 0.1

[node name="Hurtbox" type="Area2D" parent="." index="3"]
collision_layer = 1024
collision_mask = 512
script = ExtResource( 7 )
body_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13.5 )
shape = SubResource( 23 )
